# MES1_System

./: .dockerignore  .gitignore  Dockerfile  LICENSE  README.md  package.xml  relay_control.py  setup.cfg  setup.py
.github/workflows/: ci.yml
can_relay_node_multi/: can_relay_node_multi.ino
config/: can_bridge.yaml  diagnostics.yaml  multi_node_map.yaml  socketcan.yaml
docker/: .env  .env.example  DOCKER_GUIDE.md  docker-compose.yml  docker-quickstart.sh  entrypoint.sh
launch/: can_bridge.launch.py  can_bridge_debug.launch.py  can_bridge_multi_device.launch.py
msg/: CANBusStatus.msg  CANFrame.msg  RelayState.msg
ros_can_bridge_native/: __init__.py  canopen_sdo_handler.py  command_client.py  diagnostics_publisher.py  multi_node_bridge.py  multi_node_command_client.py  relay_controller.py  socketcan_bridge_node.py
ros_can_bridge_native/utils/: __init__.py  can_utils.py  canopen_utils.py  logging_config.py
scripts/: batch_control.py  can_device_test.sh  setup_socketcan.sh  systemd_install.sh
srv/: CANDiagnostics.srv  CANTransmit.srv  RelayControl.srv
tests/: test_harness.py  test_multi_node.py
winch_control/: package.xml  setup.cfg  setup.py
winch_control/winch_control/: winch_action_client.py  winch_ecrawler_hardware.ino  winch_interface.py  winch_picker_hardware.ino
winch_msgs/: CMakeLists.txt  package.xml
winch_msgs/action/: SetTarget.action
