<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>ros_can_bridge_native</name>
  <version>2.0.0</version>
  <description>Production-grade ROS 2 CAN Bridge for gs_usb with native SocketCAN support</description>
  <maintainer email="sadaa@example.com">Sadaa Khan</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_python</buildtool_depend>
  <buildtool_depend>rosidl_default_generators</buildtool_depend>

  <depend>rclpy</depend>
  <depend>std_msgs</depend>
  <depend>can_msgs</depend>
  <depend>diagnostic_msgs</depend>
  <depend>rosidl_default_runtime</depend>

  <exec_depend>python3-can</exec_depend>
  <exec_depend>python3-netifaces</exec_depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
