<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>winch_control</name>
  <version>1.0.0</version>
  <description>KEYA Driver DC Winch Motor Hardware and ROS2 Interface</description>
  <maintainer email="sadaaadkhan@gmail.com">Sadaad Khan</maintainer>
  <license>MIT</license>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <depend>rclpy</depend>
  <depend>winch_msgs</depend>
  <depend>python3-pycan</depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
